--- a/src/app/rental/rental-list/rental-list.component.html
+++ b/src/app/rental/rental-list/rental-list.component.html
@@ -3,7 +3,7 @@
   <div class="row">
     <div class='col-md-3 col-xs-6' *ngFor="let rental of rentals">
 
-      <br-rental-list-item [currentRental]="rental"></br-rental-list-item>
+      <br-rental-list-item [rental]="rental"></br-rental-list-item>
     </div>
 
     
