--- a/src/app/rental/rental-detail/rental-detail.component.html
+++ b/src/app/rental/rental-detail/rental-detail.component.html
@@ -6,7 +6,7 @@
         </div>
         <div class="col-md-6">
           <!-- Will be replaced with map !!!! -->
-          <img src="{{rental.image}}" alt="">
+          <br-map [location]="rental.city + ', ' +  rental.street"></br-map>
         </div>
       </div>
     </div>
