--- a/src/app/rental/rental-detail/rental-detail-booking/rental-detail-booking.component.scss
+++ b/src/app/rental/rental-detail/rental-detail-booking/rental-detail-booking.component.scss
@@ -1,7 +1,5 @@
 @import '../../../../scss/variables';
 
-
-
 .booking {
   padding: 20px;
   border: 1px solid #e9e9e9;
@@ -38,4 +36,49 @@
     font-size: 13px;
     font-weight: 300;
   }
+}
+
+
+
+.daterangepicker {
+
+  td {
+    &.in-range {
+      background-color: #ffa9a9 !important;
+    }
+
+    &.active {
+      background-color: $main-color !important;
+
+      &:hover {
+        background-color: $main-color !important;
+      }
+    }
+  }
+}
+
+
+// MODAL
+
+.title {
+  font-weight: 700;
+  font-size: 24px;
+}
+
+.buttons {
+  margin: 15px 0px;
+}
+
+em {
+  font-style: normal;
+  font-size: 15px;
+  font-weight: 700;
+}
+
+p {
+  margin: 0;
+}
+
+.modal-error{
+  margin: 16px;
 }
