--- a/src/app/common/header/header.component.html
+++ b/src/app/common/header/header.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" routerLink="/">backroom</a>
+    <a class="navbar-brand" routerLink="/rentals">backroom</a>
     
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -9,10 +9,16 @@
       <ul class="navbar-nav mr-auto">
 
               <li class="nav-item">
-                    <form class="form-inline">
-                    <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-                    <button class="btn btn-outline-success my-2 my-sm-0 btn-bwm-search" type="submit">Search</button>
-                    </form>
+                    <div class="form-inline">
+                    <input 
+                    (keyup.enter)="search(citySearch.value)"
+                      class="form-control mr-sm-2" 
+                      type="search"
+                       placeholder="Search"
+                        aria-label="Search"
+                        #citySearch>
+                    <button (click)="search(citySearch.value)" class="btn btn-outline-success my-2 my-sm-0 btn-bwm-search" type="button ">Search</button>
+                    </div>
               </li>
           
             
@@ -31,6 +37,15 @@
           <li  class="nav-item">
               <a class="nav-link clickable" >{{auth.getUserName()}}</a>
             </li>
+          <div class="nav-item dropdown clickable">
+              <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Owner Section
+              </a>
+              <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                <a class="dropdown-item" routerLink="/rentals/new" >Create Rental</a>
+              </div>
+            </div>
+            
             <li  class="nav-item " >
               <a class="nav-link clickable" (click)="logout()">Logout</a>
             </li>
