--- a/src/app/common/header/header.component.scss
+++ b/src/app/common/header/header.component.scss
@@ -39,3 +39,11 @@
       }
     }
   }
+
+  .dropdown-item{
+    font-size: 14px;
+
+    &:acitve, &focus {
+      background-color: $main-color;
+    }
+  }
