--- a/src/app/rental/rental-detail/rental-detail-booking/rental-detail-booking.component.html
+++ b/src/app/rental/rental-detail/rental-detail-booking/rental-detail-booking.component.html
@@ -1,6 +1,7 @@
 <div class="booking">
-  <h3 class="booking-price">${{rental.dailyRate}} <span class="booking-per-night">per night</span></h3>
+  <h3 class="booking-price">R{{rental.dailyRate}} <span class="booking-per-night">per night</span></h3>
   <hr>
+  <ng-container *ngIf="auth.isAuthenticated() ">
   <form #bookingForm="ngForm" >
   <label>Dates</label>
     <input type="text" class="form-control daterangepicker-input" name="daterangeInput" daterangepicker [options]="options" (selected)="selectedDate($event, daterange)"
@@ -20,7 +21,13 @@
   <button (click)="openConfirmModal(content)" 
           [disabled]="!bookingForm.form.valid || !newBooking.startAt || !newBooking.endAt"
           class="btn btn-danger btn-confirm btn-block">Reserve place now</button>
+
   <hr>
+</ng-container>
+
+<div *ngIf="!auth.isAuthenticated()" class="should-login">
+  <a routerLink="/login" class="btn btn-danger" >Login and book this place today</a>
+</div>
   
   <p class="booking-note-text">
     More than 500 people checked this rental in last month.
