--- a/src/app/rental/rental-detail/rental-detail.component.html
+++ b/src/app/rental/rental-detail/rental-detail.component.html
@@ -6,7 +6,7 @@
       </div>
       <div class="col-md-6">
         <!-- Will be replaced with map !!!! -->
-        <!-- <br-map [location]="rental.city + ', ' +  rental.street"></br-map> -->
+        <br-map [location]="rental.city + ', ' +  rental.street"></br-map>
       </div>
     </div>
   </div>
@@ -16,6 +16,10 @@
       <div class="col-md-8">
         <div class="rental">
           <h2 class="rental-type {{rental.category}}">{{rental.shared ? 'Shared' : 'Whole'}} {{rental.category}}</h2>
+          <div class="rental-owner">
+            <img src="https://api.adorable.io/avatars/285/abott@adorable.png" alt="user image">
+            <span>{{rental.user.username}}</span>
+          </div>
           <h1 class="rental-title">{{rental.title}}</h1>
           <h2 class="rental-city">{{rental.city | upper}}</h2>
           <div class="rental-room-info">
