--- a/src/app/rental/rental-create/rental-create.component.html
+++ b/src/app/rental/rental-create/rental-create.component.html
@@ -90,13 +90,20 @@
             </div>
   
             <div class="form-group">
-              <label for="shared">Shared</label>
+                <label for="shared" >Shared</label>
               <input type="checkbox"
-                     class="form-control"
+                     class="form-check-input ml-5"
                      id="shared"
                      name="shared"
                     [(ngModel)]="newRental.shared">
+                    
+                    
             </div>
+
+            <!-- <div class="form-group">
+                <input type="checkbox" class="form-check-input" id="exampleCheck1">
+                <label class="form-check-label" for="exampleCheck1">Check me out</label>
+              </div> -->
             <button 
             (click)="createRental()" 
             type="button" 
