--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 @import 'scss/variables';
+@import 'scss/rental-detail';
 
 html, body, p{
     color: $main-text-color;
@@ -87,4 +88,3 @@ html, body, p{
   font-weight: 700;
   margin-bottom: 20px;
 }
-  
