Adds background image and search box

--- a/src/app/rental/rental-detail/rental-detail.component.scss
+++ b/src/app/rental/rental-detail/rental-detail.component.scss
@@ -10,7 +10,7 @@
   }
 
   .details-section {
-    color: $main-text-color;
+    color: $main-color;
     .rental {
       &-type {
         font-size: 14px;
