--- a/src/app/rental/rental-list-item/rental-list-item.component.scss
+++ b/src/app/rental/rental-list-item/rental-list-item.component.scss
@@ -20,7 +20,7 @@ a{
       .card-title {
         font-size: 19px;
         margin: 3px 0;
-        color: $main-text-color;
+        color: $main-color;
       }
       .card-text {
         font-size: 14px;
