--- a/src/app/rental/rental-list/rental-list.component.html
+++ b/src/app/rental/rental-list/rental-list.component.html
@@ -1,11 +1,18 @@
-<section id="rentalListing">
-  <h1 class="page-title">Your Home All Around Kasi</h1>
-  <div class="row">
-    <div class='col-md-3 col-xs-6' *ngFor="let rental of rentals">
+<br-search-box></br-search-box>
+     <div class="container">
+        <h1 class="page-title m-5">New Rentals</h1>
+        <span class="line"></span>
+        <section id="rentalListing">
+            
 
-      <br-rental-list-item [rental]="rental"></br-rental-list-item>
-    </div>
-
-    
-  </div>
-</section>
+            <div class="row">
+              <div class='col-md-3 col-xs-6' *ngFor="let rental of rentals">
+          
+                <br-rental-list-item [rental]="rental"></br-rental-list-item>
+                
+              </div>
+          
+              
+            </div>
+          </section>
+     </div>
