--- a/src/scss/_rental-detail.scss
+++ b/src/scss/_rental-detail.scss
@@ -10,7 +10,7 @@
   }
 
   .details-section {
-    color: $main-text-color;
+    color: $main-color;
     .rental {
       &-type {
         font-size: 14px;
