--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,3 +1,6 @@
-$main-color: #F44336;
-$main-text-color: #484848;
-$light-grey-color: #e9e9e9;
+@import 'mixins';
+
+$main-color: #9e9e9e;
+$main-dark-color: #484848;
+$main-light-color: #e9e9e9;
+$main-white-color: #fff;
