--- a/src/app/common/search-box/search-box.component.html
+++ b/src/app/common/search-box/search-box.component.html
@@ -4,7 +4,7 @@
     <div class="container">
 
       <div class="row justify-content-center">
-        <h1 class="page-title"  >Your Home All Around Kasi</h1>
+        <h1 class="page-title"  > <span class="main-header">Your Home All Around Kasi</span></h1>
           <div class="col-12 col-md-10 col-lg-8">
               <form class="card card-sm">
                   <div class="card-body row no-gutters align-items-center">
@@ -12,7 +12,7 @@
                       <div class="col">
                         <input #search
                         (keyup.enter)="search($event)"
-                        class="form-control form-control-lg form-control-borderless" 
+                        class="search-box form-control form-control-lg form-control-borderless" 
                         type="search"
                         placeholder="Search location"
                         aria-label="Search"
@@ -20,10 +20,7 @@
                       </div>
 
 
-                      <div class="col-auto">
-                          <button  class="btn btn-outline-light my-2 my-sm-0 btn-bwm-search" type="button "><i class="fa fa-search h4 text-body"></i></button>
-                      </div>
-                      <!--end of col-->
+                     
                   </div>
               </form>
           </div>
