--- a/src/app/rental/rental-detail/rental-detail.component.html
+++ b/src/app/rental/rental-detail/rental-detail.component.html
@@ -1,50 +1,59 @@
-<div class="container">
+
+<div class="container mt-5">
+    <nav aria-label="breadcrumb">
+        <ol class="breadcrumb">
+          <li class="breadcrumb-item "><a routerLink="/rentals">Home</a></li>
+          <li class="breadcrumb-item active" aria-current="page">Rental</li>
+          
+        </ol>
+      </nav>
 <section id="rentalDetails" *ngIf="rental">
   <div class="upper-section">
+      <h3 class="rent-title">{{rental.title}}</h3>
     <div class="row">
+      
       <div class="col-md-6">
         <img src="{{rental.image}}" alt="">
       </div>
       <div class="col-md-6">
         <!-- Will be replaced with map !!!! -->
-        <br-map [location]="rental.city + ', ' +  rental.street"></br-map>
+        <!-- <br-map [location]="rental.city + ', ' +  rental.street"></br-map> -->
       </div>
     </div>
   </div>
 
   <div class="details-section">
     <div class="row">
+    
       <div class="col-md-8">
         <div class="rental">
-          <h2 class="rental-type {{rental.category}}">{{rental.shared ? 'Shared' : 'Whole'}} {{rental.category}}</h2>
+          
+          <h2 class="rental-type {{rental.category}}">{{rental.category}}</h2>
           <div class="rental-owner">
             <img src="https://api.adorable.io/avatars/285/abott@adorable.png" alt="user image">
             <span>{{rental.user.username}}</span>
           </div>
-          <h1 class="rental-title">{{rental.title}}</h1>
+          
           <h2 class="rental-city">{{rental.city | upper}}</h2>
-          <div class="rental-room-info">
-            <span><i class="fa fa-building"></i>{{rental.bedrooms}} bedrooms</span>
-            <span><i class="fa fa-user"></i> {{rental.bedrooms + 4}} guests</span>
-            <span><i class="fa fa-bed"></i> {{rental.bedrooms + 2}} beds</span>
-          </div>
+          <hr>
+          <h4 class="rent-title">Rental Description</h4>
           <p class="rental-description">
             {{rental.description}}
           </p>
           <hr>
           <div class="rental-assets">
-            <h3 class="title">Assets</h3>
+            <h4 class="rent-title">Rental Overview</h4>
             <div class="row">
               <div class="col-md-6">
-                <span><i class="fa fa-asterisk"></i> Cooling</span>
-                <span><i class="fa fa-thermometer"></i> Heating</span>
-                <span><i class="fa fa-location-arrow"></i> Iron</span>
+                <span><i class="fa fa-sign"></i> {{rental.category}}</span>
+                <span><i class="fa fa-car"></i> Parking</span>
+                <span><i class="fa fa-lock"></i> Burglar Bars</span>
               </div>
-              <div class="col-md-6">
+              <!-- <div class="col-md-6">
                 <span><i class="fa fa-desktop"></i> Working area</span>
                 <span><i class="fa fa-cube"></i> Washing machine</span>
                 <span><i class="fa fa-cube"></i> Dishwasher</span>
-              </div>
+              </div> -->
             </div>
           </div>
         </div>
@@ -56,3 +65,5 @@
   </div>
 </section>
 </div>
+
+<br-footer></br-footer>
