--- a/src/app/rental/rental-list/rental-list.component.scss
+++ b/src/app/rental/rental-list/rental-list.component.scss
@@ -17,7 +17,7 @@
   font-size: 30px;
   font-weight: 700;
   margin-bottom: 20px;
-  color: $main-dark-color;
+  color: $main-dark-color !important;
   text-align: center;
 }
 
@@ -68,4 +68,39 @@ header.masthead {
 
 .overlay{
   opacity: 0.1 !important;
+}
+
+///////////////////////////////////////////////////////////////////////////////////
+
+.counter {
+  background-color:#f5f5f5;
+  padding: 20px 0;
+  border-radius: 5px;
+}
+
+.count-title {
+  font-size: 40px;
+  font-weight: normal;
+  margin-top: 10px;
+  margin-bottom: 0;
+  text-align: center;
+}
+
+.count-text {
+  font-family: inherit;
+  font-size: 11px;
+  text-transform: uppercase;
+  letter-spacing: 2.5px;
+  font-weight: 500;
+  font-weight: normal;
+  margin-top: 10px;
+  margin-bottom: 0;
+  text-align: center;
+}
+
+.fa-2x {
+  margin: 0 auto;
+  float: none;
+  display: table;
+  color: $main-dark-color;
 }
