--- a/src/app/rental/rental-search/rental-search.component.scss
+++ b/src/app/rental/rental-search/rental-search.component.scss
@@ -1,8 +1,10 @@
 @import '../../../scss/variables';
-.page-title-secondary {
-    font-size: 30px;
+.page-title {
+    
     font-weight: 700;
     margin-bottom: 20px;
-    color: $main-dark-color;
+    color: $main-dark-color !important;
     text-align: center;
   }
+
+ 
